static/main.css
/* ... */
ln {
	white-space: pre;
	display: table-cell;
	&:before {
		content: attr(num);
		width: 3em;
		display: inline-block;
		text-align:center;
		background: #fff1;
		color: #fff8;
		margin: 0 0.5em 0 0;
	}
	&:target { background-color: #222; width: 100%; }
}

repolist {
	display: flex;
	flex-wrap: wrap;
	justify-content: flex-start;
	margin: auto;
	text-align: left;
	repo {
		min-width: 320px;
		max-width: 480px;
		width: 30%;
		margin: 0 auto 10px 0.5%;
		a {
			display: block;
			color: #ffffeb;
			&:visited {color: #ffffeb; }
			&.tag {
				float: right;
				margin: 0.4rem 8px 0 0;
				white-space: nowrap;
				font-size: 70%;
			}
		}
		bar {
			display: flex;
			justify-content: space-between;
			font-family: 'Titillium Web', sans-serif;
			background: #333;
			font-size: 120%;
			padding: 4px 0 4px 12px;
			margin: 0;
			height: 30px;
			border-radius: 4px 4px 0 0;
			border: 1px gray solid;
			border-bottom: 0px;
			name {
				display: inline-block;
				width: 70%;
				height: 100%;
			}
		}
		desc {
			display: block;
			color: #ffffeb;
			background-image: linear-gradient(#222 92%, #4e0029 100%);
			margin-bottom: 20px;
			padding: 8px;
			border: 1px gray solid;
			min-height: 50px;
			border-radius: 0 0 3px 8px;
			border-bottom: #4e0029 solid 1px;
			p { margin: 0 0 5px; }
			a { margin: 0 0 5px; }
			.updated {
				color: #bbb;
				font-family: 'Titillium Web', sans-serif;
				font-size: 80%;
				margin: 6px 0 0;
				display: flex;
				justify-content: space-between;
			}
			.updated:only-child { margin: 0 }
		}
		&.lowlight {
			a {
				display: block;
				color: #777;
				&:visited { color: #777; }
			}
			bar { background: #272727; }
			desc {
				color: #999;
				background-image: linear-gradient(#222 92%, #320021 100%);
				border-bottom: #320021 solid 1px;
				.updated { color: #888; }
			}
		}
	}
}

repo {
	display: block;
	&.landing {
		border-radius: 4px 4px 0 0;
		/* border: 1px solid #808080; */
		intro {
			border-radius: 4px 4px 0 0;
			padding: 10px;
			background: #333;
			display: flex;
			justify-content: space-between;
			align-items: baseline;
			text-align: left;
			span:first-child { min-width: 30%; }
			span:nth-child(2) {
				display: flex;
				flex-grow:1;
			}
		}
	}
}

readme {
	border: 1px solid gray;
	display: block;
	margin: 2rem 0 10rem;
	border-radius: 4px 4px 0 0;
	intro {
		border-radius: 4px 4px 0 0;
		padding: 10px;
		background: #333;
		display: flex;
		justify-content: space-between;
		align-items: baseline;
		text-align: left;
	}
	.codeblock { white-space: pre; }
	code { width: 98%; }
	a { color: cadetblue; }
	a:visited { color: purple; }
}

.tag.muted {
	color: #bbb;
	font-family: 'Titillium Web', sans-serif;
	font-size: 80%;
	&:visited { color: #bbb; }
}

.treelist {
	padding: 0 8px 8px;
	font-family: "Ubuntu Mono", monospace, sans-serif;
	span.tree, span.file {
		border-top: 1px solid gray;
		margin: auto;
		padding: 4px;
		text-align: left;
		display: flex;
		justify-content: flex-start;
		> a {
			min-width: 30%;
			display: inline-block;
		}
		&:first-child { border-top: 0px solid gray; }
		div {
			display: flex;
			justify-content: space-between;
			flex-grow: 1;
		}
	}
	label {
		border-top: 1px solid gray;
		display: flex;
		justify-content: center;
	}
	span.tree > a::before { content: "📁"; padding-right: 8px;}
	span.file > a::before { content: "📄"; padding-right: 8px;}
}

search {
	font-family: 'Titillium Web', sans-serif;
	margin: 0 2.5%;
	background: #333;
	height: 3rem;
	border-radius: 2px;
	padding: 0.4rem 1%;
	display: flex;
	gap: 1em;
	form {
		flex-grow: 1;
		display: flex;
		input { flex-grow: 1; }
	}
}

searchresults {
	display:block;
	div {
		display: block;
		margin: 1rem 0;
		text-align:left;
		filename {
			display: block;
			background: #404040;
			color: #a6a6a6;
			border-radius: 3px 3px 0 0;
			border: 1px gray solid;
			border-bottom: 0px;
			height: 1.5em;
			padding: 4px 12px;
		}
		code {
			background: #333;
			border-radius: 0 0 3px 3px;
			border: 1px gray solid;
			border-top: 0px;
			white-space: break-spaces;
			overflow: scroll;
		}
	}
}

actionable {
	margin: 1rem 2.5%;
	display: block;
	min-height: 50px;
	row  {
		color: white;
		a {
			display: flex;
			justify-content: space-between;
			margin: 4px;
			padding: 4px;
			border-bottom: 1px solid gray;
			text-align: left;
		}
		a:hover{ background: #ddd2; }
		> div { margin: 0 1%; }
		div.main {
			flex-grow: 1;
			font-size: 124%;
			width: auto;
		}
		.meta {
			width: auto;
			min-width: 35px;
		}
		.muted {
			margin: 0 3px 0 0 ;
			display: inline-block;
			font-size: 1rem;
		}
		desc { display: block; }
	}
}

.upstream {
	color: #bbb;
	display: block;
	font-family: 'Titillium Web', sans-serif;
	font-size: 90%;
	margin: 6px 0 0;
}

li {
	display: block;
	list-style: none;
}

commit {
	display: block;
	text-align: left;
	padding: 0;
	margin-bottom: 20px;
	background: #333;
	border-radius: 3px 3px 0 0;
	> data {
		display: block;
		padding: 8px;
		background: #333;
		border-radius: 3px 3px 0 0;
	}
	> top, > foot {
		text-align: left;
		display: block;
		background-color: #686868;
		padding: 8px;
		> span {
			display: inline-block;
			float: right;
		}
	}
	> top {
		border-radius: 3px 3px 0 0;
		border-top: #4e0029 solid 2px;
	}
	> foot {
		border-bottom: #4e0029 solid 2px;
		border-radius: 0 0 3px 3px;
	}
}

textarea.paste {
	width: 100%;
	min-height: 20em;
}
/* ... */

